focus/internals/src/lib/operation/snapshots/focus_internals__operation__sync__testing__clone_contains_top_level.snap
---
source: focus/internals/src/lib/operation/sync.rs
expression: "&profile"
---
/*
!/*/
/focus/
*.bzl
BUILD*
WORKSPACE*

