focus/internals/src/lib/operation/snapshots/focus_internals__operation__sync__testing__sync_layer_manipulation-2.snap
---
source: focus/internals/src/lib/operation/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/library_b/
/mandatory_z/
/project_b/
/project_b/src/
!/project_b/src/*/
/project_b/src/main/
!/project_b/src/main/*/
/project_b/src/main/java/
!/project_b/src/main/java/*/
/project_b/src/main/java/com/
!/project_b/src/main/java/com/*/
/project_b/src/main/java/com/example/
!/project_b/src/main/java/com/example/*/
/project_b/src/main/java/com/example/cmdline/
/3rdparty/
/focus/
/pants-internal/
/pants-support/
/tools/

