focus/internals/src/lib/operation/snapshots/focus_internals__operation__sync__testing__sync_layer_manipulation-3.snap
---
source: focus/internals/src/lib/operation/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/library_a/
/library_b/
/mandatory_z/
/project_a/
/project_a/src/
!/project_a/src/*/
/project_a/src/main/
!/project_a/src/main/*/
/project_a/src/main/java/
!/project_a/src/main/java/*/
/project_a/src/main/java/com/
!/project_a/src/main/java/com/*/
/project_a/src/main/java/com/example/
!/project_a/src/main/java/com/example/*/
/project_a/src/main/java/com/example/cmdline/
/project_b/
/project_b/src/
!/project_b/src/*/
/project_b/src/main/
!/project_b/src/main/*/
/project_b/src/main/java/
!/project_b/src/main/java/*/
/project_b/src/main/java/com/
!/project_b/src/main/java/com/*/
/project_b/src/main/java/com/example/
!/project_b/src/main/java/com/example/*/
/project_b/src/main/java/com/example/cmdline/
/3rdparty/
/focus/
/pants-internal/
/pants-support/
/tools/

