focus/internals/src/lib/operation/snapshots/focus_internals__operation__sync__testing__sync_layer_manipulation.snap
---
source: focus/internals/src/lib/operation/sync.rs
expression: "std::fs::read_to_string(&profile_path)?"
---
/*
!/*/
/focus/
/mandatory_z/

